Bug 15919 - vfs_ceph_new should not use ceph_ll_nonblocking_readv_writev for fsync_send
Summary: vfs_ceph_new should not use ceph_ll_nonblocking_readv_writev for fsync_send
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-18 17:30 UTC by Shachar Sharon
Modified: 2025-11-11 12:31 UTC (History)
1 user (show)

See Also:


Attachments
Patch from master for v4-23-test (3.25 KB, patch)
2025-09-22 12:43 UTC, Guenther Deschner
anoopcs: review+
Details
Patch from master for v4-22-test (3.25 KB, patch)
2025-09-22 12:44 UTC, Guenther Deschner
anoopcs: review+
Details
Patch from master for v4-21-test (3.25 KB, patch)
2025-09-22 12:45 UTC, Guenther Deschner
anoopcs: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shachar Sharon 2025-09-18 17:30:12 UTC
Libcephfs API ceph_ll_nonblocking_readv_writev is used by vfs_ceph_new for async fsync operations (using fsync=true flag). However, this is a misleading API which does not perform actual fsync as one would expect, but used only in write-sync operations. Thus, the Samba implementation does not have proper fsync semantics.

Future versions of libcephfs are expected to have adequate API called  'ceph_ll_nonblocking_fsync'.
Comment 1 Samba QA Contact 2025-09-22 12:25:03 UTC
This bug was referenced in samba master:

82c0988a8bc3d3e364e2d56ad8ea27e359fbc3f0
5200c120f34c4a28fa9f4cb55b46dbb9d90eb758
Comment 2 Guenther Deschner 2025-09-22 12:43:43 UTC
Created attachment 18731 [details]
Patch from master for v4-23-test
Comment 3 Guenther Deschner 2025-09-22 12:44:35 UTC
Created attachment 18732 [details]
Patch from master for v4-22-test
Comment 4 Guenther Deschner 2025-09-22 12:45:43 UTC
Created attachment 18733 [details]
Patch from master for v4-21-test
Comment 5 Anoop C S 2025-09-22 13:08:51 UTC
Hi Jule,

Please consider including it for v4.23, v4.22 and v4.21. Thanks.
Comment 6 Jule Anger 2025-09-25 12:10:55 UTC
Pushed to autobuild-v4-{23,22,21}-test.
Comment 7 Samba QA Contact 2025-09-25 13:25:03 UTC
This bug was referenced in samba v4-22-test:

23d2e88c641841dcd4f511083b7499a3c3a104b5
5c357796ab422166731d6d7ed2d0b8a25bca42b1
Comment 8 Samba QA Contact 2025-09-26 10:37:11 UTC
This bug was referenced in samba v4-23-test:

ee5660600a44b3d2fb2f907c31a16a5b59de3552
73f3f2a56ebb7971c0fb481d804c709b8f2558ed
Comment 9 Samba QA Contact 2025-09-26 13:52:17 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.1):

ee5660600a44b3d2fb2f907c31a16a5b59de3552
73f3f2a56ebb7971c0fb481d804c709b8f2558ed
Comment 10 Samba QA Contact 2025-10-15 13:21:22 UTC
This bug was referenced in samba v4-21-test:

c74aa4a6cbe02b60e2b9b01b58fd28d91f2e3f60
13bc5d1887e90741cf286066c8fd19d8a5b67c74
Comment 11 Jule Anger 2025-10-15 16:34:17 UTC
Closing out bug report.

Thanks!
Comment 12 Samba QA Contact 2025-10-16 14:37:42 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.6):

23d2e88c641841dcd4f511083b7499a3c3a104b5
5c357796ab422166731d6d7ed2d0b8a25bca42b1
Comment 13 Samba QA Contact 2025-11-11 12:31:02 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.10):

c74aa4a6cbe02b60e2b9b01b58fd28d91f2e3f60
13bc5d1887e90741cf286066c8fd19d8a5b67c74